# Architech

./: CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html
.github/: SECURITY.md  dependabot.yml
.github/workflows/: main.yml
config/: config.ini  config.yaml
deprecated/src/architech/: build.py
deprecated/tests/: test1.py
guide/: CODE_OF_CONDUCT.md
site/: index.css  main.js
src/: pyproject.toml  setup.py
src/architech/: start.py
src/tests/: test1.py
tests/: test1.py
