[project]
name = "architech"
version = "0.0.1"
authors = [
  { name="Atlas", email="loxingle1@gmail.com" },
]
description = "NLP Python Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
