[project]
name = "architech"
version = "1.0.0"
authors = [
  { name="Atlas", email="vtlvs.0@gmail.com" },
]
description = "NLP Python Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
